Gradle with Jigsaw: Testのコンパイル